Adding global results

--- a/web/src/app/global/global.component.html
+++ b/web/src/app/global/global.component.html
@@ -7,9 +7,9 @@
       <div class="card">
         <h5 class="card-header">Totales</h5>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><span class="badge badge-danger">{{forms.length}}</span> Optimizadores Instalados</li>
-          <li class="list-group-item"><span class="badge badge-danger">{{varillas.length}}</span> Varillas Instaladas</li>
-          <li class="list-group-item"><span class="badge badge-danger">{{fallidas.length}}</span> Visitas Fallidas</li>
+          <li class="list-group-item"><span class="badge badge-danger">{{totals.forms}}</span> Optimizadores Instalados</li>
+          <li class="list-group-item"><span class="badge badge-danger">{{totals.varillas}}</span> Varillas Instaladas</li>
+          <li class="list-group-item"><span class="badge badge-danger">{{totals.fallidas}}</span> Visitas Fallidas</li>
         </ul>
       </div>
     </div>
