--- a/web/src/app/material/material.component.html
+++ b/web/src/app/material/material.component.html
@@ -2,9 +2,9 @@
   <br />
   <h2>Reporte de Materiales</h2>
   <hr />
-  <select class="form-control" (change)="subcontratistaChanged($event.target.value)" [(ngModel)]="selectedSupervisor">
+  <select class="form-control" (change)="subcontratistaChanged($event.target.value)" [(ngModel)]="selectedSupervisor" >
     <option value="all">Todos</option>
-    <option *ngFor="let s of subcontratistas" [ngValue]="s">[{{s.instalaciones.length}} instalaciones] ({{s.ciudad}}) {{s.nombre}}</option>
+    <option *ngFor="let s of subcontratistas" [value]="s.id">({{s.ciudad}}) {{s.nombre}}</option>
   </select>
   <div class="card">
     <h5 class="card-header">Materiales utilizados totales</h5>
@@ -15,7 +15,7 @@
         <th>Unidad</th>
       </tr>
       <tr *ngFor="let m of materials">
-        <td><span class="badge badge-warning">{{m.quantity | number: '1.2-2'}}</span></td>
+        <td><span class="badge badge-warning">{{m.total | number: '1.2-2'}}</span></td>
         <td>{{m.descripcion}}</td>
         <td>{{m.unidad}}</td>
       </tr>
