--- a/web/src/app/material/material.component.html
+++ b/web/src/app/material/material.component.html
@@ -1,14 +1,14 @@
 <div class="container">
-  <br />
+  <br/>
   <h2>Reporte de Materiales</h2>
-  <hr />
-  <select class="form-control" (change)="subcontratistaChanged($event.target.value)" [(ngModel)]="selectedSupervisor" >
+  <hr/>
+  <select class="form-control" (change)="subcontratistaChanged($event.target.value)" [(ngModel)]="selectedSupervisor">
     <option value="all">Todos</option>
     <option *ngFor="let s of subcontratistas" [value]="s.id">({{s.ciudad}}) {{s.nombre}}</option>
   </select>
   <div class="card">
     <h5 class="card-header">Materiales utilizados totales</h5>
-    <table class="table table-bordered table-dark table-striped table-hover">
+    <table class="table table-bordered table-dark table-striped table-hover" *ngIf="materials?.length">
       <tr>
         <th>Cantidad</th>
         <th>Material</th>
@@ -20,5 +20,8 @@
         <td>{{m.unidad}}</td>
       </tr>
     </table>
+  </div>
+  <div *ngIf="!materials.length" class="center">
+    <h3>No se han realizado instalaciones</h3>
   </div>
 </div>
